--- a/css/styles.css
+++ b/css/styles.css
@@ -354,7 +354,11 @@ background: linear-gradient(to right, #f642db 5%, #0f4076);
     -moz-text-fill-color: transparent; 
 }
 
-
+.pro{
+    box-shadow: 0px 0px 0px #000, 0px 0px 15px #555555;
+    border-radius: 20px;
+    border: rgba(81,81,81,1.00);
+}
 
 
                                             /* Product page */
